and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## Unreleased
### Added
- [LOG_FORWARDER] [REDIS] Support for queues, sets, publish and streams modes for log insertion
- [LOGOMELASTICSEARCH] Handle log insertion errors returned by elasticsearch
- [LOGOM] Add the ability to define the spooling directory for DA queues
### Changed
- [DEPENDENCIES] Upgrade djongo and code for pymongo>=4
- [FRONTEND] [GUI] Improve binding information for Filebeat, Redis and Kafka listeners
- [CRON] Update Reputation Context DBs at 6:00am instead of 2:00am
- [LOGOM] Increment checkpoint interval for DA queues, to increase performances
- [LOGOM] Code and logic factorization
- [LOGOM] Allow to deactivate limitation of the size of DA queues on disk
- [LOGOM] [ELASTICSEARCH] Limit available certificates to non-CA ones
- [API_PARSER] [CROWDSTRIKE] Allow to disable fetching of 'incident' logs
### Fixed
- [NETWORK] Correctly assign a new/changed IPv6 IP to an existing interface
- [FRONTEND] JSONField default value
- [FRONTEND] Redis settings improperly displayed
- [NETWORK] [GUI] Prevent missing interfaces in selection when refreshing interfaces on a cluster
- [GUI] Wrong date formatting in the task list


## [2.16.6] - 2024-07-12
### Added
- [API_PARSER] [WAF_BARRACUDA] New API parser WAF_BARRACUDA
### Fixed
- [API_PARSER] [HARFANGLAB] Handle independent saved timestamps for 'alerts' and 'threats' logs
- [API_PARSER] [PROOFPOINT_TRAP] Avoid errors on missing 'emails' field


## [2.15.5] - 2024-06-28
### Added
- [API_PARSER] [SIGNALSCIENCES_NGWAF] Add site_name key in logs
- [API_PARSER] [GATEWATCHER_ALERTS] New collector
- [API_PARSER] [CISCO_UMBRELLA] New collector
### Fixed
- [API_PARSER] [VECTRA] Correctly allow to test the Collector before saving it
- [API_PARSER] [HARFANGLAB] Increase delay to 10 minutes to be sure to get all logs
- [AUTHENTICATION] [GUI] LDAP Users can now authenticate once activated


## [2.15.4] - 2024-05-27
### Changed