@@ -76,12 +76,13 @@ nat proto tcp from 127.0.0.5 to {{n.management_ip}} port 6379 -> {{node.manageme
 {% endif %}
 
 # Rsyslog forwarders
-{% for proto, ip, port in node.get_forwarders_enabled %}
-{% if ":" in node.logom_outgoing_ip %}
-nat proto {{proto}} from fd00::204 to {{ip}} port {{port}} -> {{node.logom_outgoing_ip}}
-{% else %}
-nat proto {{proto}} from 127.0.0.4 to {{ip}} port {{port}} -> {{node.logom_outgoing_ip}}
-{% endif %}
+{% for proto, ip, port, route_ipv4, route_ipv6 in node.get_forwarders_enabled %}
+{%- if route_ipv6 %}
+nat proto {{proto}} from fd00::204 to {{ip}} port {{port}} -> {{route_ipv6}}
+{%- endif %}
+{%- if route_ipv4 %}
+nat proto {{proto}} from 127.0.0.4 to {{ip}} port {{port}} -> {{route_ipv4}}
+{%- endif %}
 {% endfor %}
 # HAProxy backends
 {% for family, proto, ip, port in node.get_backends_enabled %}
